# onboarding-data-analysis-ML-model

./: .env.example  .env_example.md  README.md  dashboard.html  dev_server.py  onboarding-dropoff-analyzer.md  pyproject.toml  requirements.txt  supabase_schema.sql
.github/workflows/: ci.yml  vercel-deployment.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_event_id.py  0003_add_schema_version_and_model_versions.py  0004_add_dead_letter_table.py  0005_add_project_column.py  0006_add_operational_tables.py  0007_add_session_summary_and_project_funnel.py  0008_add_insight_status.py  0009_add_archival_and_insight_shipped.py  0010_add_time_partitioning_raw_events.py  0011_add_archive_compaction.py  0012_add_event_schema_registry.py  0013_add_connector_cursor.py  0014_add_dlq_attempts.py  0015_add_data_quality_and_schema_workflow.py  0016_add_modeling_tables.py  0017_add_report_log_and_insight_fields.py  0018_add_ops_metrics.py  0019_add_mlops_hygiene.py  0020_add_api_key_hash_and_observed_props.py  0021_add_promoted_flag_model_version.py  0022_add_schema_drift_alerts.py  0023_add_backfill_jobs.py  0024_add_feature_store.py  0025_add_cluster_labels.py  0026_recommendation_engine_expansion.py  0027_add_report_log_and_insight_fields.py  0028_ingestion_normalization_enhancements.py  0029_normalization_enrichment_rules.py  0034_experiment_framework.py  (+24 more)
src/: api_endpoints.py  business_logic.py  clustering.py  config_manager.py  email_digest.py  email_scheduler.py  friction_detection.py  integrations.py  onboarding_models.py  recommendation_engine.py  report.py
(+89 files in other folders)
